# CorruptionTracker

./: .gitignore  Dockerfile  README.md  db.sqlite3  manage.py  pyproject.toml
corruption_tracker/: asgi.py  settings.py  urls.py  wsgi.py
website/: admin.py  models.py  urls.py  views.py
website/migrations/: 0001_initial.py  0002_remove_corruptionstory_date_published_and_more.py  0003_alter_corruptionstory_options.py
website/templates/website/: base.html  corruption.html  corruption_detail.html  kenyas_loans.html  land_grabbing.html  stalled_projects.html
