[tool.poetry]
name = "corruption-tracker"
version = "0.1.0"
description = "Personal project"
authors = ["Anonymous"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "^3.8.1"
Django = "^5.1"
sqlparse = "^0.5.1"
gunicorn = "^23.0.0"
whitenoise = "^6.7.0"

[tool.poe.tasks]
r = "./manage.py runserver 0:8000"
m = "./manage.py"
mm = "./manage.py makemigrations"
mi = "./manage.py migrate"
md = ["mm", "mi"]
t = "pytest"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
